After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756513 - Fixed crash during removal of last application in registryd.
Fixed crash during removal of last application in registryd.
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-core
unspecified
Other Linux
: Normal normal
: ---
Assigned To: At-spi maintainer(s)
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-10-13 15:41 UTC by Tomasz Olszak
Modified: 2015-10-25 15:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch that fixes the issue mentioned in description (909 bytes, patch)
2015-10-13 15:41 UTC, Tomasz Olszak
none Details | Review
Updated fix - removed semicolon (976 bytes, patch)
2015-10-14 11:57 UTC, Tomasz Olszak
committed Details | Review

Description Tomasz Olszak 2015-10-13 15:41:27 UTC
Created attachment 313200 [details] [review]
Patch that fixes the issue mentioned in description

Patch is simple and self-explanatory. Sometimes registryd crashed when applications deregistered from atspi bus.
Comment 1 Tomasz Olszak 2015-10-14 11:57:18 UTC
Created attachment 313257 [details] [review]
Updated fix - removed semicolon

Additionally I removed unnecessary semicolon after if condition bracket.
Comment 2 Mike Gorse 2015-10-25 15:52:18 UTC
Comment on attachment 313257 [details] [review]
Updated fix - removed semicolon

Thanks for the patch.
Pushed to master: 8adcd0
Pushed to gnome-3-18: a2a2ad