Fixed crash during removal of last application in registryd.

Function find_index_of_reference always returned invalid index.

https://bugzilla.gnome.org/show_bug.cgi?id=756513